update new changes

--- a/aboutus.html
+++ b/aboutus.html
@@ -304,7 +304,9 @@
 
       <div
         class="breadcrumb-section-two section bg-image"
-        style="background-image: url(./include/images/explore/D.png)"
+        style="
+          background-image: url(./include/images/collection/top-collection.jpg);
+        "
       >
         <div class="container">
           <div
@@ -337,43 +339,19 @@
           >
             <div class="about-us-main-content">
               <div class="about-us-main-text">
-                <h4>We’re Family</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h4>Our Story</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Jardan has always revolved around family. Sed ullamcorper nec
-                  ipsum vitae fermentum. Suspendisse potenti. Vivamus eu augue a
-                  nisi malesuada bibendum. Sed ut libero in diam tincidunt
-                  luctus. Fusce convallis bibendum sem, ac volutpat elit
-                  vehicula a. Sed at massa ut ipsum venenatis condimentum a vel
-                  justo.
+                  In the heart of Australia, amidst its vibrant landscapes and
+                  urban spirit, was born a brand with a singular vision: The Art
+                  of Stylish Living. Welcome to Delta Modern Furniture.
                 </p>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Jardan has always revolved around family. Sed ullamcorper nec
-                  ipsum vitae fermentum. Suspendisse potenti. Vivamus eu augue a
-                  nisi malesuada bibendum. Sed ut libero in diam tincidunt
-                  luctus. Fusce convallis bibendum sem, ac volutpat elit
-                  vehicula a. Sed at massa ut ipsum venenatis condimentum a vel
-                  justo. Etiam et nisi vel quam euismod cursus vel vel eros. Sed
-                  eu urna eget augue hendrerit vulputate. Vivamus elementum mi
-                  eu bibendum hendrerit. Phasellus eleifend dolor ut mi cursus,
-                  sed tincidunt justo varius. Sed nec vestibulum libero.
-                  Vestibulum eu tristique purus. Sed in pharetra dui, eu
-                  volutpat metus. Nullam in consectetur justo. Integer sit amet
-                  vestibulum lorem. Cras euismod neque nec justo iaculis, ac
-                  lacinia neque sollicitudin. Sed vitae sem sit amet odio
-                  vehicula hendrerit in sit amet quam.
-                </p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Jardan has always revolved around family. Sed ullamcorper nec
-                  ipsum vitae fermentum. Suspendisse potenti. Vivamus eu augue a
-                  nisi malesuada bibendum. Sed ut libero in diam tincidunt
-                  luctus. Fusce convallis bibendum sem, ac volutpat elit
-                  vehicula a. Sed at massa ut ipsum venenatis condimentum a vel
-                  justo. Etiam et nisi vel quam euismod cursus vel vel eros. Sed
-                  eu urna eget augue hendrerit vulputate.
+                  From the bustling, dynamic streets of Brisbane to the serene
+                  coastal vibes of the Gold Coast, our twin showrooms serve as
+                  sanctuaries of design – spaces where refined elegance meets
+                  modern aesthetics. But our essence lies in more than just our
+                  locations; it's rooted in our core beliefs and the experiences
+                  we offer.
                 </p>
               </div>
               <div class="about-us-main-img">
@@ -394,7 +372,7 @@
             data-os-animation-delay="0.7s"
           >
             <div class="about-full-content">
-              <img src="./include/images/explore/D.png" />
+              <img src="./include/images/collection/collection1.jpg" />
             </div>
           </div>
         </div>
@@ -410,7 +388,7 @@
             data-os-animation-delay="0.7s"
           >
             <div class="about-full-content">
-              <img src="./include/images/explore/C.jpg" />
+              <img src="./include/images/collection/collection2.jpg" />
             </div>
           </div>
         </div>
@@ -427,33 +405,14 @@
           >
             <div class="about-us-main-content">
               <div class="about-us-main-text">
-                <h4>Since 19**</h4>
+                <h4>Luxury in Simplicity</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Jardan has always revolved around family. Sed ullamcorper nec
-                  ipsum vitae fermentum. Suspendisse potenti. Vivamus eu augue a
-                  nisi malesuada bibendum. Sed ut libero in diam tincidunt
-                  luctus. Fusce convallis bibendum sem, ac volutpat elit
-                  vehicula a. Sed at massa ut ipsum venenatis condimentum a vel
-                  justo.
-                </p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Jardan has always revolved around family. Sed ullamcorper nec
-                  ipsum vitae fermentum. Suspendisse potenti. Vivamus eu augue a
-                  nisi malesuada bibendum. Sed ut libero in diam tincidunt
-                  luctus. Fusce convallis bibendum sem, ac volutpat elit
-                  vehicula.
-                </p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Jardan has always revolved around family. Sed ullamcorper nec
-                  ipsum vitae fermentum. Suspendisse potenti. Vivamus eu augue a
-                  nisi malesuada bibendum. Sed ut libero in diam tincidunt
-                  luctus. Fusce convallis bibendum sem, ac volutpat elit
-                  vehicula a. Sed at massa ut ipsum venenatis condimentum a vel
-                  justo. Etiam et nisi vel quam euismod cursus vel vel eros. Sed
-                  eu urna eget augue hendrerit vulputate.
+                  Our curated collections are an embodiment of the mantra that
+                  luxury doesn't shout, it whispers. Crafted with precision,
+                  each piece we offer brings with it a sense of luxury wrapped
+                  in beautifully simple designs. We believe that true elegance
+                  lies in the subtleties, and our furniture is a testament to
+                  that belief.
                 </p>
               </div>
               <div class="about-us-main-img">
@@ -491,26 +450,13 @@
           >
             <div class="about-us-main-content">
               <div class="about-us-main-text">
-                <h4>Designed for the Good Life</h4>
+                <h4>Enduring Impressions</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Jardan has always revolved around family. Sed ullamcorper nec
-                  ipsum vitae fermentum. Suspendisse potenti. Vivamus eu augue a
-                  nisi malesuada bibendum. Sed ut libero in diam tincidunt
-                  luctus. Fusce convallis bibendum sem, ac volutpat elit
-                  vehicula a. Sed at massa ut ipsum venenatis condimentum a vel
-                  justo.
-                </p>
-
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Jardan has always revolved around family. Sed ullamcorper nec
-                  ipsum vitae fermentum. Suspendisse potenti. Vivamus eu augue a
-                  nisi malesuada bibendum. Sed ut libero in diam tincidunt
-                  luctus. Fusce convallis bibendum sem, ac volutpat elit
-                  vehicula a. Sed at massa ut ipsum venenatis condimentum a vel
-                  justo. Etiam et nisi vel quam euismod cursus vel vel eros. Sed
-                  eu urna eget augue hendrerit vulputate.
+                  Every item on display in our showrooms, every piece that
+                  carries the Delta Modern Furniture emblem, resonates with a
+                  commitment to quality. We don't just offer furniture; we offer
+                  companions that will stand the test of time, impressing and
+                  enduring in equal measure.
                 </p>
               </div>
               <div class="about-us-main-img">
@@ -531,7 +477,7 @@
             data-os-animation-delay="0.7s"
           >
             <div class="about-full-content">
-              <img src="./include/images/about/bano-desktop.avif" />
+              <img src="./include/images/banner/bannerslider6.png" />
             </div>
           </div>
         </div>
@@ -548,35 +494,16 @@
           >
             <div class="about-us-main-content">
               <div class="about-us-main-text">
-                <h4>Our Delta Furniture</h4>
+                <h4>Global Designs, Personalized Experiences</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Jardan has always revolved around family. Sed ullamcorper nec
-                  ipsum vitae fermentum. Suspendisse potenti. Vivamus eu augue a
-                  nisi malesuada bibendum. Sed ut libero in diam tincidunt
-                  luctus. Fusce convallis bibendum sem, ac volutpat elit
-                  vehicula a. Sed at massa ut ipsum venenatis condimentum a vel
-                  justo.
-                </p>
-
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Jardan has always revolved around family. Sed ullamcorper nec
-                  ipsum vitae fermentum. Suspendisse potenti. Vivamus eu augue a
-                  nisi malesuada bibendum. Sed ut libero in diam tincidunt
-                  luctus. Fusce convallis bibendum sem, ac volutpat elit
-                  vehicula a. Sed at massa ut ipsum venenatis condimentum a vel
-                  justo. Etiam et nisi vel quam euismod cursus vel vel eros. Sed
-                  eu urna eget augue hendrerit vulputate.
-                </p>
-
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Jardan has always revolved around family. Sed ullamcorper nec
-                  ipsum vitae fermentum. Suspendisse potenti. Vivamus eu augue a
-                  nisi malesuada bibendum. Sed ut libero in diam tincidunt
-                  luctus. Fusce convallis bibendum sem, ac volutpat elit
-                  vehicula a.
+                  Our passion transcends boundaries. By bringing top design
+                  furniture from around the globe to Australian homes and
+                  offices, we showcase a melting pot of styles and traditions.
+                  But the Delta Modern Furniture journey doesn't end at our
+                  showrooms. Our dedicated team walks hand-in-hand with our
+                  patrons, guiding them to pick the perfect additions to their
+                  spaces, ensuring a seamless blend of their desires with our
+                  expertise.
                 </p>
               </div>
               <div class="about-us-main-img">
@@ -598,11 +525,11 @@
           >
             <div class="about-us-main-content">
               <div class="about-us-main-img">
-                <img src="./include/images/about/Indulge.png" />
+                <img src="./include/images/brandfamily/brand1.jpg" />
               </div>
 
               <div class="about-us-main-img">
-                <img src="./include/images/about/timeless.png" />
+                <img src="./include/images/brandfamily/brand2.jpg" />
               </div>
             </div>
           </div>
@@ -620,35 +547,21 @@
           >
             <div class="about-us-main-content">
               <div class="about-us-main-text">
-                <h4>Come say hello</h4>
+                <h4>More Than Furniture, A Statement</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Jardan has always revolved around family. Sed ullamcorper nec
-                  ipsum vitae fermentum. Suspendisse potenti. Vivamus eu augue a
-                  nisi malesuada bibendum. Sed ut libero in diam tincidunt
-                  luctus. Fusce convallis bibendum sem, ac volutpat elit
-                  vehicula a. Sed at massa ut ipsum venenatis condimentum a vel
-                  justo.
+                  At Delta Modern Furniture, we understand that furniture does
+                  more than fill a room. It narrates stories, hosts memories,
+                  and stands as a testament to one's tastes. It is a statement.
+                  A statement of style, of luxury, of one's unique imprint on
+                  the world.
                 </p>
 
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Jardan has always revolved around family. Sed ullamcorper nec
-                  ipsum vitae fermentum. Suspendisse potenti. Vivamus eu augue a
-                  nisi malesuada bibendum. Sed ut libero in diam tincidunt
-                  luctus. Fusce convallis bibendum sem, ac volutpat elit
-                  vehicula a. Sed at massa ut ipsum venenatis condimentum a vel
-                  justo. Etiam et nisi vel quam euismod cursus vel vel eros. Sed
-                  eu urna eget augue hendrerit vulputate.
-                </p>
-
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Jardan has always revolved around family. Sed ullamcorper nec
-                  ipsum vitae fermentum. Suspendisse potenti. Vivamus eu augue a
-                  nisi malesuada bibendum. Sed ut libero in diam tincidunt
-                  luctus. Fusce convallis bibendum sem, ac volutpat elit
-                  vehicula a.
+                  As Delta Modern Furniture continues to weave stories of
+                  stylish living across Australia, we invite you to become a
+                  part of our narrative. Dive into a world where furniture isn't
+                  just functional; it's an art, a passion, and a way of life.
+                  Join us and let's create art together.
                 </p>
               </div>
               <div class="about-us-main-img">
