--- a/sofa.html
+++ b/sofa.html
@@ -705,7 +705,7 @@
                                   class="single-grid-product mb-70 mb-md-50 mb-sm-30 mb-xs-30"
                                 >
                                   <div class="product-image">
-                                    <a href="product-detail.html">
+                                    <a href="brench-product-detail.html">
                                       <img
                                         src="https://www.tikahome.cn/upload/20230710/202307100955348312.jpg"
                                         class="img-fluid"
