--- a/cart.html
+++ b/cart.html
@@ -304,7 +304,7 @@
 
       <div
         class="breadcrumb-section-two section bg-image"
-        style="background-image: url(./include/images/explore/D.png)"
+        style="background-image: url(./include/images/brandfamily/brand1.jpg)"
       >
         <div class="container">
           <div
