update responsive img

--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
             data-os-animation-delay="0.7s"
           >
           <div id="" class="parsys_column2-content w-100">
-            <div class="parsys_column2 w-50">
+            <div class="parsys_column2 img-collection-roll">
               <div id="imagerollover" class="section imagerollover collection-img" >
              
                   <img alt="Collection" src="./include/images/collection/collection3.jpg" loading="lazy" class="">
@@ -651,7 +651,7 @@
               </div> 
 
             </div>
-              <div class="parsys_column2 w-50">
+              <div class="parsys_column2 img-collection-roll">
               <div id="text2" class="parsys-text2">
                 <p style="text-align: center;">From elegant essentials to timeless statement pieces, discover thoughtfully crafted designs that you’ll love for years to come.</p>
               </div> 
