--- a/showroom.html
+++ b/showroom.html
@@ -442,7 +442,7 @@
             data-os-animation="fadeInUp"
             data-os-animation-delay="0.7s"
           >
-            <h3 style="text-align: center">Contact Us</h3>
+            <h3 style="text-align: center; margin: 0">Contact Us</h3>
           </div>
         </div>
       </div>
