--- a/showroom.html
+++ b/showroom.html
@@ -435,19 +435,6 @@
       </div>
       <!--============================== Content End ==============================-->
       <!--============================== Content Start ==============================-->
-      <div class="content-container">
-        <div class="container">
-          <div
-            class="row os-animation"
-            data-os-animation="fadeInUp"
-            data-os-animation-delay="0.7s"
-          >
-            <h3 style="text-align: center; margin: 0">Contact Us</h3>
-          </div>
-        </div>
-      </div>
-      <!--============================== Content End ==============================-->
-      <!--============================== Content Start ==============================-->
       <div class="content-container showroom-bg">
         <div class="container">
           <div
@@ -457,7 +444,7 @@
           >
             <div class="showroom-get-touch-content">
               <div class="form-box-container">
-                <!-- <h4>Contact Us</h4> -->
+                <h4>Contact Us</h4>
                 <form action="#">
                   <div class="form-group">
                     <label for="fullName">Full Name</label>
