update the showroom

--- a/showroom.html
+++ b/showroom.html
@@ -435,7 +435,7 @@
       </div>
       <!--============================== Content End ==============================-->
       <!--============================== Content Start ==============================-->
-      <div class="content-container showroom-bg">
+      <!-- <div class="content-container showroom-bg">
         <div class="container">
           <div
             class="row os-animation"
@@ -514,9 +514,36 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!--============================== Content End ==============================-->
+      <!--============================== Content Start ==============================-->
+
+      <div class="content-container">
+        <div class="container">
+          <div
+            class="row os-animation"
+            data-os-animation="fadeInUp"
+            data-os-animation-delay="0.7s"
+          >
+          <div class="showroom-content-img">
+            <img src="./include/images/showroom/showroom1.jpg" alt="show" />
+            <img src="./include/images/showroom/showroom2.jpg" alt="show" />
+            <img src="./include/images/showroom/showroom3.jpg" alt="show" />
+            <img src="./include/images/showroom/showroom4.jpg" alt="show" />
+            <img src="./include/images/showroom/showroom4.jpg" alt="show" />
+            <img src="./include/images/showroom/showroom6.jpg" alt="show" />
+            <img src="./include/images/showroom/showroom7.jpg" alt="show" />
+          </div>
+        </div>
+        </div>
+      </div>
+    
+
+
+
+      <!--============================== Content End ==============================-->
+
       <!--============================== Content Start ==============================-->
 
       <div class="content-container">
