--- a/sideboards.html
+++ b/sideboards.html
@@ -768,7 +768,7 @@
                   <li><a href="/shoplook.html">Shop The Look</a></li>
                   <li><a href="/showroom.html">Showroom</a></li>
                   <li><a href="aboutus.html">About Us</a></li>
-                  <li><a href="/contactus.html">Contact US</a></li>
+                  <li><a href="/contactus.html">Contact Us</a></li>
                 </ul>
               </div>
               <div class="footer-address">
