update contact us and header

--- a/index.html
+++ b/index.html
@@ -153,6 +153,17 @@
                               </div>
                               About</a>
                             </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="contactus.html">
+                                <div class="nav-link-image">
+                                  <img
+                                    src="./include/images/collection/colletion-side.jpg"
+                                    alt="product"
+                                  />
+                                </div>
+                                Contact Us</a
+                              >
+                            </li>
                          </ul>
                         </div>
                       </div>
