update home slider and showroom

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
               <div class="slider1 slider-center">
                 <a href="/showroom.html"  class="kh-slide__text-box">
                   <div class="subtitle">EXPLORE OUR SHOWROOM</div>
-                  <div class="slider-title">SHOWROOM</div>
+                  <div class="slider-title slider-text-banner">SHOWROOM</div>
                   <br />
                   <!-- <a href="#" class="btn btn-default">Read now</a> -->
                 </a>
