update the banner changes

--- a/index.html
+++ b/index.html
@@ -321,19 +321,19 @@
           data-os-animation="fadeInUp"
           data-os-animation-delay="0.7s"
         >
-          <div class="banner-slider">
+          <div class="banner-slider ">
             <div >
-              <div class="banner-img">
+              <div class="banner-img bg-banner">
                 <img
                   src="./include/images/banner/bannerslider1.jpg"
                   alt="banner"
                 />
               
-                <div class="slider1">
+                <div class="slider1 slider-center ">
                   <a href="/sofa.html"  class="kh-slide__text-box">
                     <!-- <div class="subtitle">Collection</div> -->
-                    <div class="slider-title">ALL ABOUT LUXURY AND COMFORT</div>
-                    <div class="text-link">SEE OUR COLLECTION</div>
+                    <div class="slider-title ">ALL ABOUT LUXURY AND COMFORT</div>
+                    <div class="text-link ">SEE OUR COLLECTION</div>
                   </a>
                 </div>
               </div>
@@ -345,10 +345,10 @@
                 class="lookbook-logo"
                 src="./include/images/banner/bannerslider2.jpg"
               />
-              <div class="slider1 slider-center">
+              <div class="slider1 ">
                 <a href="/showroom.html"  class="kh-slide__text-box">
-                  <div class="subtitle">EXPLORE OUR SHOWROOM</div>
-                  <div class="slider-title slider-text-banner">SHOWROOM</div>
+                  <div class="subtitle ">EXPLORE OUR SHOWROOM</div>
+                  <div class="slider-title slider-text-banner ">SHOWROOM</div>
                   <br />
                   <!-- <a href="#" class="btn btn-default">Read now</a> -->
                 </a>
@@ -356,7 +356,7 @@
               </div>
             </div>
             <div >
-              <div class="banner-img">
+              <div class="banner-img ">
                 <img
                 alt="2023 Lookbook"
                 class="lookbook-logo"
@@ -365,7 +365,7 @@
               <div class="slider1 slider-center">
                 <a href="/aboutus.html"  class="kh-slide__text-box">
                   <div class="subtitle">What we prioritise</div>
-                  <div class="slider-title">ABOUT US</div>
+                  <div class="slider-title slider-bg-text">ABOUT US</div>
                   <br />
                   <!-- <a href="#" class="btn btn-default">Read now</a> -->
                 </a>
